fix project banner spacing

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -14,7 +14,7 @@
 
   .contentContainer {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 50vh 50vh 50vh;
 
     .bannerColor {
@@ -22,15 +22,15 @@
     }
   }
 
-  .contentContainer div:nth-child(2) {
-    grid-column: span 2;
+  .contentContainer div:nth-child(2),
+  div:nth-child(3),
+  div:nth-child(6) {
+    grid-column: span 3;
   }
 
-  .contentContainer div:nth-child(3) {
-    grid-column: span 2;
-  }
-
-  .contentContainer div:nth-child(6) {
+  .contentContainer div:nth-child(1),
+  div:nth-child(4),
+  div:nth-child(5) {
     grid-column: span 2;
   }
 }
